Fix: vscode initial focus state and desktop folder z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,10 +12,10 @@
 }
 
 /* Tailwind acting strange... */
-.z-\[0\] {
-  z-index: 0;
-}
-
 .z-\[1\] {
   z-index: 1;
+}
+
+.z-\[2\] {
+  z-index: 2;
 }
